--- a/securelogic.html
+++ b/securelogic.html
@@ -588,7 +588,8 @@
          </div>
          <div class="benefit-text">
             <h2>One-size-fits-all hosting doesn’t work for everyone. </h2>
-            <p style="margin-top: 50px;">That’s why we provide bespoke solutions that fit your exact needs, backed by high-performance infrastructure and expert support. Focus on your business—we’ll handle the rest.</p>
+            <p style="margin-top: 50px;">One-size-fits-all hosting doesn’t work for everyone. Public cloud platforms offer convenience, but their abstracted infrastructure can introduce performance trade-offs, unpredictable costs, and limited control. Traditional on-prem solutions, on the other hand, require heavy upfront investment and long deployment cycles.
+</p>
             <p>That’s why we deliver bespoke cloud environments designed around your exact needs—giving you the performance, flexibility, and operational efficiency that other solutions can’t. Backed by high-performance infrastructure and expert, hands-on support, we ensure your workloads run seamlessly.</p>
             <a style="margin-top: 50px;" href="#" class="benefit-btn">Learn More</a>
          </div>
