--- a/securelogic.html
+++ b/securelogic.html
@@ -555,7 +555,7 @@
             <a href="#" class="nav-item"><span>Home</span></a>
             <a href="#" class="nav-item"><span>About</span></a>
             <a href="#" class="nav-item"><span>Services</span></a>
-            <a href="#" class="nav-item"><span>Pricing</span></a>
+            <a href="#" class="nav-item"><span>Use Cases</span></a>
             <a href="#" class="nav-item"><span>Contact</span></a>
          </div>
 
