--- a/securelogic.html
+++ b/securelogic.html
@@ -885,7 +885,7 @@
     <div class="contact-us-content">
         <h1>Power up your business<br><span> with bespoke hosting</span></h1>
       
-         <a style="margin-top: 50px;" href="#" class="benefit-btn">Lets Chat</a>
+         <a style="margin-top: 50px;" href="#" class="benefit-btn">Talk to us</a>
     </div>
 </section>
 
