--- a/bogoelectronics.html
+++ b/bogoelectronics.html
@@ -33,15 +33,15 @@
     <div class="grid grid-cols-2 gap-4">
       <div>
         <label class="block text-sm font-medium">Customer Name</label>
-        <input type="text" id="customerName" class="border p-2 rounded w-full" placeholder="e.g. Juan Dela Cruz" />
+        <input type="text" id="customerName" class="border p-2 rounded w-full" placeholder="e.g. Miguel Alvarina" />
       </div>
       <div>
         <label class="block text-sm font-medium">Customer Address</label>
-        <input type="text" id="customerAddress" class="border p-2 rounded w-full" placeholder="e.g. 123 Main St, Manila" />
+        <input type="text" id="customerAddress" class="border p-2 rounded w-full" placeholder="e.g. Bogo City" />
       </div>
       <div>
         <label class="block text-sm font-medium">Project Name</label>
-        <input type="text" id="projectName" class="border p-2 rounded w-full" placeholder="e.g. Website Redesign" />
+        <input type="text" id="projectName" class="border p-2 rounded w-full" placeholder="e.g. Aircon Installation" />
       </div>
     </div>
 
