--- a/bogoelectronics.html
+++ b/bogoelectronics.html
@@ -5,50 +5,43 @@
   <title>Bogo Electronics & Service Center</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
-   @media print {
-  body * {
-    visibility: hidden;
-  }
-
-  #print-area, #print-area * {
-    visibility: visible;
-  }
-
-  #header, #footer, .header, .footer {
-    display: none !important;
-  }
-
-  #print-area {
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 210mm;
-    height: 297mm;
-    padding: 20mm;
-    box-sizing: border-box;
-    background: white;
-  }
-}
-
+    @media print {
+      body * {
+        visibility: hidden;
+      }
+      #print-area, #print-area * {
+        visibility: visible;
+      }
+      #print-area {
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 210mm;
+        height: 297mm;
+        padding: 20mm;
+        box-sizing: border-box;
+        background: white;
+      }
+    }
   </style>
 </head>
 <body class="bg-gray-100 p-4">
 
-  <div class="max-w-4xl mx-auto bg-white p-6 rounded shadow space-y-4">
+  <div class="max-w-5xl mx-auto bg-white p-6 rounded shadow space-y-4">
     <!-- <h1 class="text-2xl font-bold">Quotation Generator</h1> -->
 
     <div class="grid grid-cols-2 gap-4">
       <div>
         <label class="block text-sm font-medium">Customer Name</label>
-        <input type="text" id="customerName" class="border p-2 rounded w-full" placeholder="e.g. Miguel Alvarina" />
+        <input type="text" id="customerName" class="border p-2 rounded w-full" />
       </div>
       <div>
         <label class="block text-sm font-medium">Customer Address</label>
-        <input type="text" id="customerAddress" class="border p-2 rounded w-full" placeholder="e.g. Bogo City" />
+        <input type="text" id="customerAddress" class="border p-2 rounded w-full" />
       </div>
       <div>
         <label class="block text-sm font-medium">Project Name</label>
-        <input type="text" id="projectName" class="border p-2 rounded w-full" placeholder="e.g. Aircon Installation" />
+        <input type="text" id="projectName" class="border p-2 rounded w-full" />
       </div>
     </div>
 
@@ -62,7 +55,7 @@
     <div class="grid grid-cols-2 gap-4 mt-4">
       <div>
         <label class="block text-sm font-medium">Prepared By</label>
-        <input type="text" id="preparedBy" class="border p-2 rounded w-full" placeholder="Your Name" />
+        <input type="text" id="preparedBy" class="border p-2 rounded w-full" />
       </div>
       <div>
         <label class="block text-sm font-medium">Date</label>
@@ -93,18 +86,20 @@
     <h2 class="text-xl font-bold mb-2">Quotation</h2>
     <p class="mb-4"><strong>Project:</strong> <span id="print-project-name"></span></p>
 
-    <table class="w-full border-collapse border border-gray-500 mb-6">
+    <table class="w-full border-collapse border border-gray-500 mb-6 text-sm">
       <thead>
-        <tr>
+        <tr class="bg-gray-200">
           <th class="border border-gray-500 p-2 text-left">Item</th>
           <th class="border border-gray-500 p-2 text-left">Description</th>
-          <th class="border border-gray-500 p-2 text-right">Price (₱)</th>
+          <th class="border border-gray-500 p-2 text-right">Qty</th>
+          <th class="border border-gray-500 p-2 text-right">Unit Price (₱)</th>
+          <th class="border border-gray-500 p-2 text-right">Amount (₱)</th>
         </tr>
       </thead>
       <tbody id="print-rows"></tbody>
       <tfoot>
         <tr>
-          <td colspan="2" class="border border-gray-500 p-2 text-right font-bold">Total</td>
+          <td colspan="4" class="border border-gray-500 p-2 text-right font-bold">Total</td>
           <td class="border border-gray-500 p-2 text-right font-bold">₱<span id="print-total">0.00</span></td>
         </tr>
       </tfoot>
@@ -120,42 +115,51 @@
     function addItem() {
       const container = document.getElementById('items');
       const row = document.createElement('div');
-      row.className = "grid grid-cols-3 gap-2";
+      row.className = "grid grid-cols-5 gap-2";
       row.innerHTML = `
         <input type="text" placeholder="Item" class="item border p-2 rounded" />
         <input type="text" placeholder="Description" class="desc border p-2 rounded" />
-        <input type="number" placeholder="Price" class="price border p-2 rounded" oninput="calculateTotal()" />
+        <input type="number" placeholder="Qty" class="qty border p-2 rounded" oninput="calculateTotal()" />
+        <input type="number" placeholder="Unit Price" class="unit border p-2 rounded" oninput="calculateTotal()" />
+        <input type="text" placeholder="Amount" class="amount border p-2 rounded bg-gray-100" readonly />
       `;
       container.appendChild(row);
     }
 
     function calculateTotal() {
-      const prices = document.querySelectorAll('.price');
+      const rows = document.querySelectorAll('#items .grid');
       let total = 0;
-      prices.forEach(input => {
-        const val = parseFloat(input.value);
-        if (!isNaN(val)) total += val;
+      rows.forEach(row => {
+        const qty = parseFloat(row.querySelector('.qty').value) || 0;
+        const unit = parseFloat(row.querySelector('.unit').value) || 0;
+        const amount = qty * unit;
+        row.querySelector('.amount').value = amount.toFixed(2);
+        total += amount;
       });
       document.getElementById('total').textContent = total.toFixed(2);
     }
 
     function printQuotation() {
-      const items = document.querySelectorAll('#items .grid');
+      const rows = document.querySelectorAll('#items .grid');
       const printRows = document.getElementById('print-rows');
       printRows.innerHTML = '';
       let total = 0;
 
-      items.forEach(row => {
+      rows.forEach(row => {
         const item = row.querySelector('.item').value;
         const desc = row.querySelector('.desc').value;
-        const price = parseFloat(row.querySelector('.price').value) || 0;
-        total += price;
+        const qty = parseFloat(row.querySelector('.qty').value) || 0;
+        const unit = parseFloat(row.querySelector('.unit').value) || 0;
+        const amount = qty * unit;
+        total += amount;
 
         const tr = document.createElement('tr');
         tr.innerHTML = `
           <td class="border border-gray-500 p-2">${item}</td>
           <td class="border border-gray-500 p-2">${desc}</td>
-          <td class="border border-gray-500 p-2 text-right">${price.toFixed(2)}</td>
+          <td class="border border-gray-500 p-2 text-right">${qty}</td>
+          <td class="border border-gray-500 p-2 text-right">${unit.toFixed(2)}</td>
+          <td class="border border-gray-500 p-2 text-right">${amount.toFixed(2)}</td>
         `;
         printRows.appendChild(tr);
       });
@@ -172,7 +176,7 @@
       document.getElementById('print-area').classList.add('hidden');
     }
 
-    addItem(); // add first row on load
+    addItem(); // Add one item by default
   </script>
 
 </body>
